--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mouseover/js-validation",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Simple validation library slightly inspired by knockout.validation",
   "main": "lib/validation.js",
   "repository": "github:mouse-over/js-validation",
@@ -27,5 +27,8 @@
   },
   "jest": {
     "testRegex": "(/test/.*\\.test\\.js)$"
+  },
+  "dependencies": {
+    "@mouseover/js-utils": "^0.0.1"
   }
 }
